Bug 837253: When declaring JSObject as a friend, use 'class' instead of 'struct' to fix MSVC warning-spam. r=dvander